--- a/ppg/pg-11/molecule/ol-9/molecule.yml
+++ b/ppg/pg-11/molecule/ol-9/molecule.yml
@@ -4,12 +4,12 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: centos8-${BUILD_NUMBER}-${JOB_NAME}
+  - name: ol9-${BUILD_NUMBER}-${JOB_NAME}
     region: eu-central-1
-    image: ami-0e337c7f9752d9d34
+    image: ami-02952e732e6126584
     vpc_subnet_id: subnet-085deaca8c1c59a4f
     instance_type: t2.small
-    ssh_user: centos
+    ssh_user: ec2-user
     root_device_name: /dev/sda1
     instance_tags:
       iit-billing-tag: jenkins-pg-worker
@@ -20,7 +20,7 @@ provisioner:
     create: ../../../../playbooks/create.yml
     destroy: ../../../../playbooks/destroy.yml
     prepare: ../../../../playbooks/prepare.yml
-    cleanup: ../../playbooks/cleanup.yml
+    cleanup: ../../playbooks/cleanup-rpm.yml
     converge: ../../playbooks/playbook.yml
 verifier:
   name: testinfra
