--- a/tasks/install_ppg11.yml
+++ b/tasks/install_ppg11.yml
@@ -6,49 +6,28 @@
       state: present
     when: ansible_os_family == "RedHat"
 
-  - name: Clean dnf RHEL8
+  - name: Clean dnf oracle linux
     become: true
     command: dnf clean all -y
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+    when: ansible_os_family == "RedHat" and
+      (ansible_distribution_major_version == "8" or ansible_distribution_major_version == "9")
 
-  - name: Enable powertools RHEL8
+  - name: Enable powertools on oracle linux 8
     become: true
-    command: dnf config-manager --set-enabled powertools
+    command: dnf config-manager --set-enabled ol8_codeready_builder
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-  - name: Find all of the files inside /etc/yum.repos.d directory
-    find:
-      paths: "/etc/yum.repos.d/"
-      patterns: "*.repo"
-    register: repos
-
-  - name: Comment 'mirrorlist' in /etc/yum.repos.d/*.repo files
-    replace:
-      path: "{{ item.path }}"
-      regexp: 'mirrorlist'
-      replace: '#mirrorlist'
-    with_items: "{{ repos.files }}"
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
-  - name: Replace 'baseurl' in /etc/yum.repos.d/*.repo files
-    replace:
-      path: "{{ item.path }}"
-      regexp: '#baseurl=http://mirror.centos.org'
-      replace: 'baseurl=http://vault.centos.org'
-    with_items: "{{ repos.files }}"
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
-  - name: Update dnf RHEL8
+  - name: Enable powertools on oracle linux 9
     become: true
-    command: dnf update -y
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+    command: dnf config-manager --set-enabled ol9_codeready_builder
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "9"
 
-  - name: Disable dnf module for RHEL8
+  - name: Disable postgresql module for RHEL8
     become: true
     command: dnf module disable postgresql -y
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-  - name: Disable llvm-toolset dnf module for RHEL8
+  - name: Disable llvm-toolset for RHEL8
     become: true
     command: dnf module disable llvm-toolset -y
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
@@ -122,10 +101,6 @@
       - percona-postgresql11-debuginfo
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
 
-  - name: DNF clean RHEL
-    command: sudo dnf module disable postgresql -y
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
   - name: install Percona Platform for PostgreSQL rpm packages for RHEL
     yum:
       name: "{{ packages }}"
@@ -160,3 +135,36 @@
         - percona-postgresql11-pltcl-debuginfo
         - percona-postgresql11-server-debuginfo
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
+  - name: install Percona Platform for PostgreSQL rpm packages for RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-postgresql-client-common
+        - percona-postgresql-common
+        - percona-postgresql-server-dev-all
+        - percona-postgresql11
+        - percona-postgresql11-contrib
+        - percona-postgresql11-debuginfo
+        - percona-postgresql11-devel
+        - percona-postgresql11-docs
+        - percona-postgresql11-libs
+        - percona-postgresql11-llvmjit
+        - percona-postgresql11-plperl
+        - percona-postgresql11-plpython3
+        - percona-postgresql11-pltcl
+        - percona-postgresql11-server
+        - percona-postgresql11-test
+        - percona-postgresql11-contrib-debuginfo
+        - percona-postgresql11-debuginfo
+        - percona-postgresql11-debugsource
+        - percona-postgresql11-devel-debuginfo
+        - percona-postgresql11-libs-debuginfo
+        - percona-postgresql11-plperl-debuginfo
+        - percona-postgresql11-plpython3-debuginfo
+        - percona-postgresql11-pltcl-debuginfo
+        - percona-postgresql11-server-debuginfo
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "9"
