--- a/psp/performance_tests/tasks/debian_tasks.yml
+++ b/psp/performance_tests/tasks/debian_tasks.yml
@@ -190,12 +190,6 @@
 
   - debug: var=results.stdout_lines
 
-  - name: Add extensions to postgresql.conf for Debian
-    lineinfile:
-      path: /opt/pgsql/data/postgresql.conf
-      line: shared_preload_libraries = 'pg_tde'
-    when: load_tde
-
   # - name: Set default Access Method - heap
   #   lineinfile:
   #     path: /opt/pgsql/data/postgresql.conf
@@ -216,9 +210,9 @@
 
   - name: Run performance tests for HEAP access method
     shell: | 
-      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "Testing access method: HEAP" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=============================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Access method: HEAP without pg_tde lib loaded" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=============================================" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
@@ -256,11 +250,23 @@
 
   - debug: var=results.stdout_lines
 
+  - name: Restart Server
+    become_user: postgres
+    command: ./pg_ctl -D /opt/pgsql/data -l /tmp/postgres/logfile restart
+    args:
+      chdir: /opt/pgsql/bin
+    environment:
+      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
+      LD_LIBRARY_PATH: "/opt/pgsql/lib"
+    register: results
+
+  - debug: var=results.stdout_lines
+
   - name: Run performance tests for TDE_HEAP access method
     shell: | 
-      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "Testing access method: TDE_HEAP" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=========================================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Access method: TDE_HEAP without loading pg_tde lib loaded" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=========================================================" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
@@ -298,11 +304,23 @@
 
   - debug: var=results.stdout_lines
 
+  - name: Restart Server
+    become_user: postgres
+    command: ./pg_ctl -D /opt/pgsql/data -l /tmp/postgres/logfile restart
+    args:
+      chdir: /opt/pgsql/bin
+    environment:
+      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
+      LD_LIBRARY_PATH: "/opt/pgsql/lib"
+    register: results
+
+  - debug: var=results.stdout_lines
+
   - name: Run performance tests for TDE_HEAP_BASIC access method
     shell: | 
-      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "Testing access method: TDE_HEAP_BASIC" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=======================================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Access method: TDE_HEAP_BASIC without pg_tde lib loaded" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=======================================================" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
@@ -340,11 +358,83 @@
 
   - debug: var=results.stdout_lines
 
+  - name: Add extensions to postgresql.conf for Debian
+    lineinfile:
+      path: /opt/pgsql/data/postgresql.conf
+      line: shared_preload_libraries = 'pg_tde'
+    when: load_tde
+
+  - name: Restart Server
+    become_user: postgres
+    command: ./pg_ctl -D /opt/pgsql/data -l /tmp/postgres/logfile restart
+    args:
+      chdir: /opt/pgsql/bin
+    environment:
+      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
+      LD_LIBRARY_PATH: "/opt/pgsql/lib"
+    register: results
+
+  - debug: var=results.stdout_lines
+
+  - name: Run performance tests for HEAP access method
+    shell: | 
+      echo "====================================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Access method: HEAP with pg_tde lib loaded in server" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "====================================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
+      psql -c "DROP DATABASE IF EXISTS performance_db;" -U postgres
+      psql -c "CREATE DATABASE performance_db;" -U postgres
+      psql -d performance_db -c "ALTER SYSTEM SET default_table_access_method='heap';"
+      psql -d performance_db -c "SELECT pg_reload_conf();"
+      echo "---------------------------------"
+      pgbench -i -s {{ scale }} -d performance_db -U postgres 2>&1
+      pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "----End of HEAP access method----" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      sync
+      sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+    become_user: postgres
+    args:
+      executable: /bin/bash
+      chdir: "/tmp/postgres"
+    vars:
+      scale: "{{pgbench_scale}}"
+      clients: "{{pgbench_clients}}"
+      threads: "{{pgbench_threads}}"
+      duration: "{{pgbench_duration}}"
+    environment:
+      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
+      LD_LIBRARY_PATH: "/opt/pgsql/lib"
+      LANG: C.UTF-8
+      LC_CTYPE: C
+      LC_ALL: C
+    when: run_heap
+    register: results
+
+  - debug: var=results.stdout_lines
+
+  - name: Restart Server
+    become_user: postgres
+    command: ./pg_ctl -D /opt/pgsql/data -l /tmp/postgres/logfile restart
+    args:
+      chdir: /opt/pgsql/bin
+    environment:
+      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
+      LD_LIBRARY_PATH: "/opt/pgsql/lib"
+    register: results
+
+  - debug: var=results.stdout_lines
+
   - name: Run performance tests for TDE_HEAP access method with pg_tde loaded
     shell: | 
-      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "Testing access method: TDE_HEAP" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "==========================================================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Access method: TDE_HEAP with pg_tde loaded in server and extension created" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "==========================================================================" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
@@ -384,11 +474,23 @@
 
   - debug: var=results.stdout_lines
 
+  - name: Restart Server
+    become_user: postgres
+    command: ./pg_ctl -D /opt/pgsql/data -l /tmp/postgres/logfile restart
+    args:
+      chdir: /opt/pgsql/bin
+    environment:
+      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
+      LD_LIBRARY_PATH: "/opt/pgsql/lib"
+    register: results
+
+  - debug: var=results.stdout_lines
+
   - name: Run performance tests for TDE_HEAP_BASIC access method with pg_tde loaded
     shell: | 
-      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "Testing access method: TDE_HEAP_BASIC" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=================================================================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Access method: TDE_HEAP_BASIC  with pg_tde loaded in server and extension created" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=================================================================================" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
